--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@
 
 body {
   background-color: black;
+  /* background-image: url("https://img.freepik.com/free-vector/detailed-jungle-background_23-2148953379.jpg?w=1480&t=st=1702643705~exp=1702644305~hmac=339c5e5cc8e2a23e0f66b8c1cd87d702808ce3e85cbd7692d48aa41ab09bc7d6"); */
+  background-size: cover;
+  background-image: url('../assets/5386360.jpg');
   color: #fff;
   font-family: "Indie Flower", cursive;
   font-family: "Open Sans", sans-serif;
@@ -21,23 +24,39 @@ body {
 }
 
 h1 {
+  background: -webkit-linear-gradient(rgb(188, 12, 241), rgb(212, 4, 4));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-size: 5vmin;
   margin: 5vmin 0 0;
 }
 
 h2 {
-  margin: 0;
+  padding: 1vmin 10vmin 0;
 }
 
 h2 span {
   font-size: 3vmin;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+}
 
+.scores {
+  background-color: black;
+  opacity: 0.7;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 2vmin;
+}
+
+.scores h2:nth-of-type(2) {
+  margin-bottom: 3vmin;
 }
 
 .grid {
   align-items: center;
-  /* border: 1px solid #fff; */
+  background-color: black;
+  opacity: 0.7;
   display: flex;
   flex-wrap: wrap;
   height: 600px;
@@ -46,7 +65,6 @@ h2 span {
 }
 
 .grid > div {
-  /* border: 1px solid darkgray; */
   flex-grow: 1;
   height: 10%;
   font-family: "Courier New", Courier, monospace;
@@ -59,68 +77,43 @@ h2 span {
   border-radius: 3vmin;
   border: none;
   background-color: gray;
-  padding: 1.5vmin;
+  padding: 2vmin;
   cursor: pointer;
-  font-size: 1.5vmin;
+  font-size: 2vmin;
   transition: all 0.3s ease-in;
 }
 
 #resetBTN:hover {
   background-color: darkgray;
-  color: white;
+  background: -webkit-linear-gradient(rgb(188, 12, 241), rgb(212, 4, 4));
 }
 
 .snakeFood {
-  background-color: red;
+  /* background-color: red; */
   border-radius: 50%;
   z-index: 0;
-  /* transition: all 0.5s ease-in; */
+  transition: all 0.2s ease-in;
 }
 
-/* .transitionFood {
-  transition: all 1s ease-in-out;
-} */
-
 .popUpScore {
-  color: rgba(233, 0, 233, 0.8);
-  /* font-size: 4vmin; */
+  color: rgba(233, 0, 233);
 }
 
 .snake {
-  width: 5px;
-  background-color: green;
-  /* transition: all 1s ease-in-out; */
-
+  background-color: rgba(113, 189, 129, 0.90);
 }
 
-#mute {
-  display: flex;
-  
+.snakeHead {
+  background: rgb(113, 200, 129);
 }
 
-.scores h2:nth-of-type(2) {
-  margin-bottom: 3vmin;
-}
-
-.border{
+.border {
+  opacity: 1;
   background-color: white;
-  /* box-shadow: 1px 1px 5px rgba(245, 245, 39, 0.85); */
   box-shadow: rgba(233, 0, 233, 0.5) 0px 7px 30px 0px;
-  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
-  /* border-radius: 50%; */
   position: relative;
   transition: all 1s ease-in-out;
-  /* z-index: 9999999; */
-}
-
- .scores { 
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-} 
-
-h2 {
-  padding: 0 10vmin;
+  z-index: 9999999;
 }
 
 .gameOver {
@@ -142,8 +135,7 @@ h2 {
   opacity: 0;
   z-index: -1;
   transition: all 0.2s ease-in;
-  font-family: 'Roboto', sans-serif;
-
+  font-family: "Roboto", sans-serif;
 }
 
 .gameOver > P {
@@ -153,8 +145,4 @@ h2 {
 .gameOver.open {
   opacity: 0.8;
   z-index: 999999;
-}
-
-.snakeHead {
-  background-color: aqua;
 }
