--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,8 @@ h2 span {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* padding: 15vmin;
-  margin-top: 4vmin; */
+  /* padding: 15vmin; */
+  margin-top: 6.5vmin;
   width: 600px;
   /* height: 600px; */
   font-size: 50px;
